bonz-mongodeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonz-mongo-deployment
  labels:
    app: bonz-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bonz-mongo
  template:
    metadata:
      labels:
        app: bonz-mongo
    spec:
      containers:
      - name: bonz-mongo
        image: mongo
        ports:
        - containerPort: 27017
