bonz-nginxdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonz-nginx-deployment
  labels:
    app: bonz-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bonz-nginx
  template:
    metadata:
      labels:
        app: bonz-nginx
    spec:
      containers:
      - name: bonz-nginx
        image: nginx
        ports:
        - containerPort: 80
