bonz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bonz-service
spec:
  selector:
    app: bonz-mongo
  ports:
    - protocol: TCP
      port: 80
