bonz-mongo-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bonz-mongo-policy
spec:
  podSelector:
    matchLabels:
      app: bonz-mongo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bonz-nginx
    ports:
    - protocol: TCP
      port: 27017
