bonz-nginx-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bonz-nginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: bonz-nginx
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: bonz-mongo
    ports:
    - protocol: TCP
      port: 27017
